tests/ui/target_modifiers/no_value_bool.error_explicit.stderr
error: mixing `-Zreg-struct-return` will cause an ABI mismatch in crate `no_value_bool`
  --> $DIR/no_value_bool.rs:16:1
   |
LL | #![feature(no_core)]
   | ^
   |
   = help: the `-Zreg-struct-return` flag modifies the ABI so Rust crates compiled with different values of this flag cannot be used together safely
   = note: unset `-Zreg-struct-return` in this crate is incompatible with `-Zreg-struct-return=true` in dependency `enabled_reg_struct_return`
   = help: set `-Zreg-struct-return=true` in this crate or unset `-Zreg-struct-return` in `enabled_reg_struct_return`
   = help: if you are sure this will not cause problems, you may use `-Cunsafe-allow-abi-mismatch=reg-struct-return` to silence this error

error: aborting due to 1 previous error

